Reverting visibility issues

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -4,25 +4,25 @@ body {
   color: #322900;
   margin: 0;
   padding: 0;
-  z-index: 1; /* Make sure it covers the background but not the text */
+  background-image: url("/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
-body::after {
+body::before {
   content: "";
   position: absolute; /* Absolute inside body */
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/background.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
   background-color: rgba(255, 255, 255, 0.4); /* Lighten the background */
   pointer-events: none; /* So it doesn't block clicking */
   z-index: -1; /* Make sure it covers the background but not the text */
 }
+
   /* Customizing AntD Buttons */
   .ant-btn-primary {
     background-color: rgba(20, 130, 0, 0.65); /* Semi-transparent background */
